--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div>
-		<a href="https://youtu.be/PxCfJ4iYT80">My current favourite song is <song_Lord krishna></a>
+		<a href="https://youtu.be/PxCfJ4iYT80">My current favourite song is song_Lord krishna</a>
 	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
